; ModuleID = '/home/carl/AnghaBench/linux/sound/firewire/extr_amdtp-am824.c_midi_ratelimit_per_packet.c'
source_filename = "/home/carl/AnghaBench/linux/sound/firewire/extr_amdtp-am824.c_midi_ratelimit_per_packet.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.amdtp_stream = type { i32, %struct.amdtp_am824* }
%struct.amdtp_am824 = type { i32*, i32 }

@MIDI_BYTES_PER_SECOND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.amdtp_stream*, i32)* @midi_ratelimit_per_packet to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @midi_ratelimit_per_packet(%struct.amdtp_stream* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.amdtp_stream*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.amdtp_am824*, align 8
  %7 = alloca i32, align 4
  store %struct.amdtp_stream* %0, %struct.amdtp_stream** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.amdtp_stream*, %struct.amdtp_stream** %4, align 8
  %9 = getelementptr inbounds %struct.amdtp_stream, %struct.amdtp_stream* %8, i32 0, i32 1
  %10 = load %struct.amdtp_am824*, %struct.amdtp_am824** %9, align 8
  store %struct.amdtp_am824* %10, %struct.amdtp_am824** %6, align 8
  %11 = load %struct.amdtp_am824*, %struct.amdtp_am824** %6, align 8
  %12 = getelementptr inbounds %struct.amdtp_am824, %struct.amdtp_am824* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %5, align 4
  %15 = zext i32 %14 to i64
  %16 = getelementptr inbounds i32, i32* %13, i64 %15
  %17 = load i32, i32* %16, align 4
  store i32 %17, i32* %7, align 4
  %18 = load i32, i32* %7, align 4
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %2
  store i32 1, i32* %3, align 4
  br label %44

21:                                               ; preds = %2
  %22 = load i32, i32* @MIDI_BYTES_PER_SECOND, align 4
  %23 = load %struct.amdtp_stream*, %struct.amdtp_stream** %4, align 8
  %24 = getelementptr inbounds %struct.amdtp_stream, %struct.amdtp_stream* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = mul nsw i32 %22, %25
  %27 = load i32, i32* %7, align 4
  %28 = sub nsw i32 %27, %26
  store i32 %28, i32* %7, align 4
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @max(i32 %29, i32 0)
  store i32 %30, i32* %7, align 4
  %31 = load i32, i32* %7, align 4
  %32 = load %struct.amdtp_am824*, %struct.amdtp_am824** %6, align 8
  %33 = getelementptr inbounds %struct.amdtp_am824, %struct.amdtp_am824* %32, i32 0, i32 0
  %34 = load i32*, i32** %33, align 8
  %35 = load i32, i32* %5, align 4
  %36 = zext i32 %35 to i64
  %37 = getelementptr inbounds i32, i32* %34, i64 %36
  store i32 %31, i32* %37, align 4
  %38 = load i32, i32* %7, align 4
  %39 = load %struct.amdtp_am824*, %struct.amdtp_am824** %6, align 8
  %40 = getelementptr inbounds %struct.amdtp_am824, %struct.amdtp_am824* %39, i32 0, i32 1
  %41 = load i32, i32* %40, align 8
  %42 = icmp slt i32 %38, %41
  %43 = zext i1 %42 to i32
  store i32 %43, i32* %3, align 4
  br label %44

44:                                               ; preds = %21, %20
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32 @max(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
